--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -267,7 +267,7 @@
 				<li no="15"><a href="http://www.youku.com" target="_blank"
 					style="background: url(img/defaultIcon.png) no-repeat 0px -448px">优
 						酷</a></li>
-				<li no="16"><a href="http://www.iqiyi.com/" target="_blank"
+				<li no="16"  type="delete"><a href="http://www.iqiyi.com/" target="_blank"
 					style="background: url(img/defaultIcon.png) no-repeat 0px -480px">爱奇艺</a></li>
 				<li no="17"><a href="http://www.12306.cn" target="_blank"
 					style="background: url(img/defaultIcon.png) no-repeat 0px -512px">12306</a></li>
