change baidu cdn

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -10,9 +10,9 @@
 <link rel="shortcut icon" type="image/ico" href="img/favicon.ico" />
 <link rel="stylesheet" type="text/css" href="css/main.css" />
 <script
-	src="http://lib.sinaapp.com/js/jquery/1.10.2/jquery-1.10.2.min.js"></script>
+	src="http://libs.baidu.com/jquery/1.10.2/jquery.min.js"></script>
 <script
-	src="http://lib.sinaapp.com/js/jquery-ui/1.10.2/jquery-ui.min.js"></script>
+	src="http://libs.baidu.com/jqueryui/1.10.2/jquery-ui.min.js"></script>
 <script charset="utf-8" src="js/jquery.cookie.js"></script>
 <script>
 	/** trim() method for String */
@@ -288,7 +288,6 @@
 			</ul>
 		</div>
 		<div id="footer">
-			<img src="img/poweredby.gif" />
 		</div>
 	</div>
 	<div id="about">
