--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html lang="zh">
 <head>
-<meta charset="utf-8">
+<meta charset="utf-8"/>
 <meta name="keywords"
-	content="上网导航,网址大全,网址导航,simple上网导航,简单导航,simple网址大全,清晰网址导航,常用网站,好简单导航,haosimple导航">
+	content="上网导航,网址大全,网址导航,simple上网导航,简单导航,simple网址大全,清晰网址导航,常用网站,好简单导航,haosimple导航"/>
 <meta name="description"
-	content="Simple--简洁清晰的网址导航，为用户提供常用网址、自定义网址，提供最简单便捷的上网导航服务。">
+	content="Simple--简洁清晰的网址导航，为用户提供常用网址、自定义网址，最简洁的上网导航。"/>
 <title>Simple 最简洁的上网导航</title>
 <link rel="shortcut icon" type="image/ico" href="img/favicon.ico" />
 <link rel="stylesheet" type="text/css" href="css/main.css" />
