--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -345,6 +345,8 @@
 	function hideAdd() {
 		$('#mysite').hide();
 		$('#main').show();
+		$("#mysite-name-add").val('');
+		$("#mysite-url-add").val('');
 	}
 
 	function isURL(str_url) {
