--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -304,7 +304,7 @@
 		<button onclick="add()" id="btn-site-add">添加</button>
 		<button onclick="hideAdd()" id="btn-site-back">返回</button>
 	</div>
-	<div id="footer"></div>
+	<div id="footer"><a target="_blank" style="color:#999;font-size:13px;text-decoration: none;" href="http://www.miibeian.gov.cn/">沪ICP备14026799号</a></div>
 
 	<div id="about">
 		<ol>
