--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -210,7 +210,7 @@
 	<div id="head">
 		<a href="#" onclick="showAbout()">帮助</a> <a href="#" onclick="reset()">重置</a>
 		<a href="#" onclick="showAdd()">添加</a><a id="break" href="#"
-			target="_blank" title="每天一篇正能量">歇会吧</a>
+			target="_blank" title="天天有的看">歇会吧</a>
 	</div>
 	<div id="logo">Simple</div>
 	<div id="trashContainer">
@@ -304,7 +304,7 @@
 		<button onclick="add()" id="btn-site-add">添加</button>
 		<button onclick="hideAdd()" id="btn-site-back">返回</button>
 	</div>
-	<div id="footer"><a target="_blank" style="color:#999;font-size:13px;text-decoration: none;" href="http://www.miibeian.gov.cn/">沪ICP备14026799号</a></div>
+	<div id="footer"><a target="_blank" style="color:#999;font-size:13px;text-decoration: none;" href="http://www.miibeian.gov.cn/">沪ICP备14026799号-1</a></div>
 
 	<div id="about">
 		<ol>
