change content desc

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -5,13 +5,13 @@
 <meta name="keywords"
 	content="上网导航,网址大全,网址导航,simple上网导航,简单导航,simple网址大全,清晰网址导航,常用网站,好简单导航,haosimple导航" />
 <meta name="description"
-	content="Simple--简洁清晰的网址导航，为用户提供常用网址、自定义网址，最简洁的上网导航。" />
+	content="Simple--简洁清晰的网址导航，精简生活从Simple开始，不一样的玩法" />
 <title>Simple 最简洁的上网导航</title>
-<link rel="shortcut icon" type="image/ico" href="img/favicon.ico" />
 <link rel="stylesheet" type="text/css" href="css/main.css" />
 <script src="http://libs.baidu.com/jquery/1.10.2/jquery.min.js"></script>
 <script src="http://libs.baidu.com/jqueryui/1.10.2/jquery-ui.min.js"></script>
 <script charset="utf-8" src="js/jquery.cookie.js"></script>
+<link rel="shortcut icon" type="image/ico" href="img/favicon.ico" />
 <script>
 	/** trim() method for String */
 	String.prototype.trim = function() {
@@ -310,11 +310,10 @@
 		<ol>
 			<li>按空格键，可将焦点置于搜索框内; 按 Ctrl+&lt;- 键，可清空搜索框</li>
 			<li>默认搜索为百度，关键词前空一格则使用google搜索</li>
-			<li>网址可拖动调换位置并随意删除</li>
-			<li>点击重置可恢复到最最原始的页面</li>
-			<li>点击添加可自由添加您喜欢的网址</li>
-			<li>看在我们连logo都省了的份上，分享给身边的屌丝们吧</li>
-			<!--  <li>请关注<a href="#" style="color: red;">Simple上网导航</a>官方微博，我们一起努力
+			<li>网址可拖动调换位置并随意删除，可以添加您喜欢的网址</li>
+			<li>点击重置恢复到最最原始的页面</li>
+			<li>看在我们连logo都省了的份上，快来分享吧</li>
+			<!--  <li>请关注官方微博，我们一起努力
 			</li>-->
 		</ol>
 		<a style="float: right; text-decoration: none;" href="#"
