change share-button style

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -208,7 +208,7 @@
 </head>
 <body>
 	<div id="head">
-		<wb:share-button style="float:right" appkey="190970940" addition="simple" type="button" default_text="www.haosimple.com 一个简洁的上网导航，不一样的玩法等你参与" ralateUid="5193087566" picture_search="false"></wb:share-button>
+		<wb:share-button style="margin:2px 1px 0px 0px;float:right;" appkey="190970940" addition="simple" type="button" default_text="www.haosimple.com 一个简洁的上网导航，不一样的玩法等你参与" ralateUid="5193087566" picture_search="false"></wb:share-button>
 		<a href="#" onclick="showAbout()">帮助</a> <a href="#" onclick="reset()">重置</a>
 		<a href="#" onclick="showAdd()">添加</a><a id="break" href="#"
 			target="_blank" title="天天有的看">歇会吧</a>
