--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -19,7 +19,8 @@
 	};
 
 	$(function() {
-		$("#sortable").sortable({delay: 100,
+		$("#sortable").sortable({
+			delay : 100,
 			stop : function(event, ui) {
 				$("#trashContainer").css("opacity", 0);
 			},
@@ -208,7 +209,10 @@
 </head>
 <body>
 	<div id="head">
-		<wb:share-button style="margin:2px 1px 0px 0px;float:right;" appkey="190970940" addition="simple" type="button" default_text="www.haosimple.com 一个简洁的上网导航，不一样的玩法等你参与" ralateUid="5193087566" picture_search="false"></wb:share-button>
+		<wb:share-button style="margin:2px 1px 0px 0px;float:right;"
+			appkey="190970940" addition="simple" type="button"
+			default_text="www.haosimple.com 一个简洁的上网导航，不一样的玩法等你参与"
+			ralateUid="5193087566" picture_search="false"></wb:share-button>
 		<a href="#" onclick="showAbout()">帮助</a> <a href="#" onclick="reset()">重置</a>
 		<a href="#" onclick="showAdd()">添加</a><a id="break" href="#"
 			target="_blank" title="天天有的看">歇会吧</a>
@@ -305,7 +309,11 @@
 		<button onclick="add()" id="btn-site-add">添加</button>
 		<button onclick="hideAdd()" id="btn-site-back">返回</button>
 	</div>
-	<div id="footer"><a target="_blank" style="color:#999;font-size:13px;text-decoration: none;" href="http://www.miibeian.gov.cn/">沪ICP备14026799号-1</a></div>
+	<div id="footer">
+		<a target="_blank"
+			style="color: #999; font-size: 13px; text-decoration: none;"
+			href="http://www.miibeian.gov.cn/">沪ICP备14026799号-1</a>
+	</div>
 
 	<div id="about">
 		<ol>
@@ -314,124 +322,135 @@
 			<li>网址可拖动调换位置并随意删除，可以添加您喜欢的网址</li>
 			<li>点击重置恢复到最最原始的页面</li>
 			<!-- <li>看在我们连logo都省了的份上，快来分享吧</li> -->
-			<li>有趣的好玩的，请关注官方微博 <wb:follow-button uid="5193087566" type="red_1" width="67" height="24" ></wb:follow-button></li>
+			<li>有趣的好玩的，请关注官方微博 <wb:follow-button uid="5193087566"
+					type="red_1" width="67" height="24"></wb:follow-button></li>
 		</ol>
 		<a style="float: right; text-decoration: none;" href="#"
 			onclick="$('#about').hide('fast');">关闭</a>
 	</div>
+
+	<script>
+		var promotLoaded = false;
+
+		//显示添加框
+		function showAdd() {
+			$("#main").hide();
+			$('#mysite').show();
+			if (!promotLoaded) {
+				promotLoaded = true;
+				$("#area").click(
+						function() {
+							if ($("#mysite").is(":visible")
+									&& $(".mysite-suggest").is(":hidden"))
+								hideAdd();
+						});
+				$(document.body)
+						.append(
+								'<script type="text/javascript" charset="utf-8" src="js/autopromot.js"/>');
+			}
+		}
+
+		function hideAdd() {
+			$('#mysite').hide();
+			$('#main').show();
+			$("#mysite-name-add").val('');
+			$("#mysite-url-add").val('');
+		}
+
+		function isURL(str_url) {
+			var strRegex = "(([0-9]{1,3}.){3}[0-9]{1,3}|(www\.|[a-zA-Z]\.)[a-zA-Z0-9\-\.]+\.[a-z]{2,3}(\:[0-9]+)*(/($|[a-zA-Z0-9\.\,\;\?\'\\\+&amp;%\$#\=~_\-]+))*$)";
+			var re = new RegExp(strRegex);
+			if (re.test(str_url)) {
+				return (true);
+			} else {
+				return (false);
+			}
+		}
+
+		//添加url方法
+		function add() {
+			var name = $("#mysite-name-add").val().trim();
+			var url = $("#mysite-url-add").val().trim();
+			if (name == '' || url == '') {
+				addtip("添加内容不能为空", "red");
+				return;
+			}
+
+			url = url.replace(/^(http|https):\/\//, '');
+			if (!isURL(url)) {
+				addtip("网址不规范", "red");
+				return;
+			}
+
+			if (name.length == 2)
+				name = name[0] + ' ' + name[1];
+
+			var customArray;
+			var custom = $.cookie('custom');
+			if (custom == undefined)
+				customArray = [];
+			else
+				customArray = $.parseJSON(custom);
+
+			var currentNo = getCustomMaxNo() + 1;
+			customArray.push({
+				"name" : name,
+				"url" : url,
+				no : currentNo
+			});
+			//save to cookie
+			$.cookie('custom', JSON.stringify(customArray), {
+				expires : 1000
+			});
+
+			appendSite(currentNo, name, url);
+			changeOrder();
+			$("#mysite-name-add").val('');
+			$("#mysite-url-add").val('');
+			$("#btn-site-back").focus();
+			addtip(name + " 添加成功", "green");
+			//post to server
+			$.post("./addurl", {
+				"url" : url
+			});
+
+		}
+
+		function addtip(tip, color) {
+			$("#addtip").fadeTo(1000, 1);
+			$("#addtip").css("color", color).html(tip);
+			$("#addtip").fadeTo(1000, 0);
+		}
+
+		$(document).ready(function() {
+			//获取break
+			$.post("./getBreak", function(data) {
+				if (data.status == 0) {
+					$("#break").attr("href", data.url);
+				}
+			}, "json");
+
+			//响应回车事件
+			$("#mysite-name-add,#mysite-url-add").keydown(function(e) {
+				// 回车键
+				if (e.keyCode == 13) {
+					$("#mysite-name-add,#mysite-url-add").blur();
+					$("#btn-site-add").click();
+					return false;//阻止back
+				}
+			});
+		});
+	</script>
+	<script charset="gbk" src="http://www.baidu.com/js/opensug.js"></script>
+	<script src="http://tjs.sjs.sinajs.cn/open/api/js/wb.js"
+		type="text/javascript" charset="utf-8"></script>
+	<script type="text/javascript">
+		var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://"
+				: " http://");
+		document
+				.write(unescape("%3Cscript src='"
+						+ _bdhmProtocol
+						+ "hm.baidu.com/h.js%3F2ad34d2e5d2d0ec583512c9151b0b754' type='text/javascript'%3E%3C/script%3E"));
+	</script>
 </body>
-<script>
-	var promotLoaded = false;
-
-	//显示添加框
-	function showAdd() {
-		$("#main").hide();
-		$('#mysite').show();
-		if (!promotLoaded) {
-			promotLoaded = true;
-			$("#area").click(
-					function() {
-						if ($("#mysite").is(":visible")
-								&& $(".mysite-suggest").is(":hidden"))
-							hideAdd();
-					});
-			$(document.body)
-					.append(
-							'<script type="text/javascript" charset="utf-8" src="js/autopromot.js"/>');
-		}
-	}
-
-	function hideAdd() {
-		$('#mysite').hide();
-		$('#main').show();
-		$("#mysite-name-add").val('');
-		$("#mysite-url-add").val('');
-	}
-
-	function isURL(str_url) {
-		var strRegex = "(([0-9]{1,3}.){3}[0-9]{1,3}|(www\.|[a-zA-Z]\.)[a-zA-Z0-9\-\.]+\.[a-z]{2,3}(\:[0-9]+)*(/($|[a-zA-Z0-9\.\,\;\?\'\\\+&amp;%\$#\=~_\-]+))*$)";
-		var re = new RegExp(strRegex);
-		if (re.test(str_url)) {
-			return (true);
-		} else {
-			return (false);
-		}
-	}
-
-	//添加url方法
-	function add() {
-		var name = $("#mysite-name-add").val().trim();
-		var url = $("#mysite-url-add").val().trim();
-		if (name == '' || url == '') {
-			addtip("添加内容不能为空", "red");
-			return;
-		}
-
-		url=url.replace(/^(http|https):\/\//,'');
-		if (!isURL(url)) {
-			addtip("网址不规范", "red");
-			return;
-		}
-
-		if (name.length == 2)
-			name = name[0] + ' ' + name[1];
-
-		var customArray;
-		var custom = $.cookie('custom');
-		if (custom == undefined)
-			customArray = [];
-		else
-			customArray = $.parseJSON(custom);
-
-		var currentNo = getCustomMaxNo() + 1;
-		customArray.push({
-			"name" : name,
-			"url" : url,
-			no : currentNo
-		});
-		//save to cookie
-		$.cookie('custom', JSON.stringify(customArray), {
-			expires : 1000
-		});
-
-		appendSite(currentNo, name, url);
-		changeOrder();
-		$("#mysite-name-add").val('');
-		$("#mysite-url-add").val('');
-		$("#btn-site-back").focus();
-		addtip(name + " 添加成功", "green");
-		//post to server
-		$.post("./addurl", {
-			"url" : url
-		});
-
-	}
-
-	function addtip(tip, color) {
-		$("#addtip").fadeTo(1000, 1);
-		$("#addtip").css("color", color).html(tip);
-		$("#addtip").fadeTo(1000, 0);
-	}
-
-	$(document).ready(function() {
-		//获取break
-		$.post("./getBreak", function(data) {
-			if (data.status == 0) {
-				$("#break").attr("href", data.url);
-			}
-		}, "json");
-
-		//响应回车事件
-		$("#mysite-name-add,#mysite-url-add").keydown(function(e) {
-			// 回车键
-			if (e.keyCode == 13) {
-				$("#mysite-name-add,#mysite-url-add").blur();
-				$("#btn-site-add").click();
-				return false;//阻止back
-			}
-		});
-	});
-</script>
-<script charset="gbk" src="http://www.baidu.com/js/opensug.js"></script>
-<script src="http://tjs.sjs.sinajs.cn/open/api/js/wb.js" type="text/javascript" charset="utf-8"></script>
 </html>
